<resources>
    <string name="app_name">BikeRentAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="scan">Scan</string>
    <string name="ride">Ride</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="password_changed">Password changed</string>
    <string name="current_password_wrong">Current password is incorrect</string>
    <string name="passwords_dont_match">New password and confirm password do not match</string>
    <string name="password_required">Please fill in all fields</string>
    <string name="history">History</string>
    <string name="history_empty">No rental history yet</string>

</resources>