<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B1B3B">

    <!-- Top dark section -->
    <View
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#0B1B3B"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"/>

    <!-- App name -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BikeRent"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/topBackground"
        app:layout_constraintBottom_toBottomOf="@id/topBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bottom card -->

    <LinearLayout
        android:id="@+id/bottomCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_top_card"
        android:backgroundTintMode="src_in"
        android:clipToOutline="true"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBackground">


        <!-- Welcome text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/fullNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_password"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:text="@string/current_password"
            android:textColor="#ADADAD"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:text="@string/new_password"
            android:textColor="#ADADAD"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="12dp" />


        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp" />



        <!-- Save button -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/yellow_button_color"
            app:cornerRadius="20dp" />





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
